Updated gui and gen rework

--- a/labGen/imgui.ini
+++ b/labGen/imgui.ini
@@ -1,5 +1,5 @@
 [Debug]
-Pos=40,40
+Pos=82,78
 Size=400,400
 Collapsed=0
 
@@ -11,5 +11,15 @@ Collapsed=0
 [Another Window]
 Pos=394,44
 Size=594,476
+Collapsed=0
+
+[Labyrinthe]
+Pos=550,32
+Size=660,603
+Collapsed=0
+
+[Couleur]
+Pos=160,356
+Size=250,266
 Collapsed=0
 
